fixed overflow on card table

--- a/client/src/components/StatementInfo/StatementInfo.css
+++ b/client/src/components/StatementInfo/StatementInfo.css
@@ -6,3 +6,6 @@ body {
   font-family: 'Exo 2', 'sans-serif';
   margin-bottom: 120px;
 }
+#statement-card {
+  overflow: auto;
+}
